Creating pcToOriginMap in FTL shouldn't insert unnecessary NOPs https://bugs.webkit.org/show_bug.cgi?id=162879

Reviewed by Filip Pizlo.

If there is a recent watchpoint label, using MacroAssembler::label() will pad
the instruction stream with NOPs to provide space for a jump.  This changes
Air::generate() to use labelIgnoringWatchpoints() to create pcToOriginMap
entries to eliminate unneccesary NOPs.

* b3/air/AirGenerate.cpp:
(JSC::B3::Air::generate):
* b3/testb3.cpp:
(JSC::B3::testPCOriginMapDoesntInsertNops): New test.
(JSC::B3::run):


Canonical link: https://commits.webkit.org/180810@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206752 268f45cc-cd09-0410-ab3c-d52691b4dbfc